// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a known field is missing.managed 1`] = `
Object {
  "commands": Array [
    Object {
      "AddShape": Object {
        "baseShapeId": "$optional",
        "name": "",
        "shapeId": "shape_0",
      },
    },
    Object {
      "SetParameterShape": Object {
        "shapeDescriptor": Object {
          "ProviderInShape": Object {
            "consumingParameterId": "$optionalInner",
            "providerDescriptor": Object {
              "ShapeProvider": Object {
                "shapeId": "baseline-shape_6",
              },
            },
            "shapeId": "shape_0",
          },
        },
      },
    },
    Object {
      "SetFieldShape": Object {
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "baseline-field_3",
            "shapeId": "shape_0",
          },
        },
      },
    },
  ],
  "expectations": Object {
    "allowedCoreShapeKindsByShapeId": Object {
      "baseline-shape_6": "$string",
    },
    "allowedCoreShapes": Array [
      "$string",
    ],
    "fieldIsOptional": false,
    "lastField": "baseline-field_3",
    "lastFieldKey": "firstName",
    "lastFieldShapeId": "baseline-shape_6",
    "lastObject": "baseline-shape_8",
  },
  "preview": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 0,
          "text": "expected",
        },
        Object {
          "style": 1,
          "text": "String",
        },
      ],
      "changeType": 1,
      "diffHash": "2579fe9e29b0dd7e",
      "getJsonBodyToPreview": [Function],
      "location": Object {
        "inRequest": undefined,
        "inResponse": Object {
          "contentType": "application/json",
          "responseId": "baseline-response_1",
          "statusCode": 200,
        },
        "method": "GET",
        "pathId": "baseline-path_3",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "values of ",
        },
        Object {
          "style": 1,
          "text": "firstName",
        },
        Object {
          "style": 0,
          "text": "did not match",
        },
        Object {
          "style": 1,
          "text": "String",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "allowsExpand": true,
        "assertion": Array [
          Object {
            "style": 0,
            "text": "expected required",
          },
          Object {
            "style": 1,
            "text": "String",
          },
        ],
        "ignoreRule": Object {
          "diffHash": "2579fe9e29b0dd7e",
          "examplesOfCoreShapeKinds": "$optional",
        },
        "interactionPointers": Array [
          "id",
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {
          "id": Array [
            Object {
              "path": Array [
                Object {
                  "JsonObjectKey": Object {
                    "key": "firstName",
                  },
                },
              ],
            },
          ],
        },
        "title": "missing",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [
        Object {
          "style": 0,
          "text": "what values are allowed for",
        },
        Object {
          "style": 1,
          "text": "firstName",
        },
      ],
      "isField": true,
      "isOptional": true,
      "shapes": Array [
        Object {
          "coreShapeKind": "$string",
          "isValid": true,
        },
      ],
    },
  },
  "trailValues": Object {
    "affordances": Array [
      Object {
        "fieldSet": Array [],
        "trail": Object {
          "path": Array [
            Object {
              "JsonObjectKey": Object {
                "key": "firstName",
              },
            },
          ],
        },
        "wasArray": false,
        "wasBoolean": false,
        "wasEmptyArray": false,
        "wasNull": false,
        "wasNumber": false,
        "wasObject": false,
        "wasString": false,
      },
    ],
    "interactions": Object {
      "wasArray": Array [],
      "wasArrayTrails": Object {},
      "wasBoolean": Array [],
      "wasBooleanTrails": Object {},
      "wasMissing": Array [
        "id",
      ],
      "wasMissingTrails": Object {
        "id": Array [
          Object {
            "path": Array [
              Object {
                "JsonObjectKey": Object {
                  "key": "firstName",
                },
              },
            ],
          },
        ],
      },
      "wasNull": Array [],
      "wasNullTrails": Object {},
      "wasNumber": Array [],
      "wasNumberTrails": Object {},
      "wasObject": Array [],
      "wasObjectTrails": Object {},
      "wasString": Array [],
      "wasStringTrails": Object {},
    },
  },
}
`;

exports[`a new field is provided in a required nested object.managed 1`] = `
Object {
  "commands": Array [
    Object {
      "AddShape": Object {
        "baseShapeId": "$string",
        "name": "",
        "shapeId": "shape_10000",
      },
    },
    Object {
      "AddField": Object {
        "fieldId": "field_0",
        "name": "motto",
        "shapeDescriptor": Object {
          "FieldShapeFromShape": Object {
            "fieldId": "field_0",
            "shapeId": "shape_10000",
          },
        },
        "shapeId": "shape_8",
      },
    },
  ],
  "expectations": Object {
    "allowedCoreShapeKindsByShapeId": Object {
      "shape_8": "$object",
    },
    "allowedCoreShapes": Array [
      "$object",
    ],
    "fieldIsOptional": false,
    "lastField": "field_6",
    "lastFieldKey": "principality",
    "lastFieldShapeId": "shape_8",
    "lastObject": "shape_8",
  },
  "preview": Object {
    "diffDescription": Object {
      "assertion": Array [
        Object {
          "style": 1,
          "text": "undocumented field",
        },
      ],
      "changeType": 0,
      "diffHash": "6b018ce3b01e79d0",
      "getJsonBodyToPreview": [Function],
      "location": Object {
        "inRequest": undefined,
        "inResponse": Object {
          "contentType": "application/json",
          "responseId": "response_1",
          "statusCode": 200,
        },
        "method": "GET",
        "pathId": "path_2",
      },
      "title": Array [
        Object {
          "style": 0,
          "text": "undocumented field",
        },
        Object {
          "style": 1,
          "text": "motto",
        },
        Object {
          "style": 0,
          "text": "observed",
        },
      ],
    },
    "previewTabs": Array [
      Object {
        "allowsExpand": true,
        "assertion": Array [
          Object {
            "style": 0,
            "text": "expected required",
          },
          Object {
            "style": 1,
            "text": "Object",
          },
        ],
        "ignoreRule": Object {
          "diffHash": "6b018ce3b01e79d0",
          "examplesOfCoreShapeKinds": "$string",
        },
        "interactionPointers": Array [
          "id",
        ],
        "invalid": true,
        "jsonTrailsByInteractions": Object {
          "id": Array [
            Object {
              "path": Array [
                Object {
                  "JsonObjectKey": Object {
                    "key": "location",
                  },
                },
                Object {
                  "JsonObjectKey": Object {
                    "key": "principality",
                  },
                },
                Object {
                  "JsonObjectKey": Object {
                    "key": "motto",
                  },
                },
              ],
            },
          ],
        },
        "title": "string",
      },
    ],
    "toCommands": [Function],
    "updateSpecChoices": Object {
      "copy": Array [],
      "isField": true,
      "isOptional": false,
      "shapes": Array [
        Object {
          "coreShapeKind": "$string",
          "isValid": true,
        },
      ],
    },
  },
  "trailValues": Object {
    "affordances": Array [
      Object {
        "fieldSet": Array [],
        "trail": Object {
          "path": Array [
            Object {
              "JsonObjectKey": Object {
                "key": "location",
              },
            },
            Object {
              "JsonObjectKey": Object {
                "key": "principality",
              },
            },
            Object {
              "JsonObjectKey": Object {
                "key": "motto",
              },
            },
          ],
        },
        "wasArray": false,
        "wasBoolean": false,
        "wasEmptyArray": false,
        "wasNull": false,
        "wasNumber": false,
        "wasObject": false,
        "wasString": true,
      },
    ],
    "interactions": Object {
      "wasArray": Array [],
      "wasArrayTrails": Object {},
      "wasBoolean": Array [],
      "wasBooleanTrails": Object {},
      "wasMissing": Array [],
      "wasMissingTrails": Object {},
      "wasNull": Array [],
      "wasNullTrails": Object {},
      "wasNumber": Array [],
      "wasNumberTrails": Object {},
      "wasObject": Array [],
      "wasObjectTrails": Object {},
      "wasString": Array [
        "id",
      ],
      "wasStringTrails": Object {
        "id": Array [
          Object {
            "path": Array [
              Object {
                "JsonObjectKey": Object {
                  "key": "location",
                },
              },
              Object {
                "JsonObjectKey": Object {
                  "key": "principality",
                },
              },
              Object {
                "JsonObjectKey": Object {
                  "key": "motto",
                },
              },
            ],
          },
        ],
      },
    },
  },
}
`;
